# Mathian

./: ExpressionParser.cs  Mathian.csproj  Mathian.sln  README.md  Sigmath.csproj  Sigmath.sln  __init__.py  index.html  packages.config  parser.cs  setup.py
Nuget/: Sigmath.1.0.0.nupkg  Sigmath.nuspec
Properties/: AssemblyInfo.cs
Sigmath.ConvertedToBoo/: Sigmath.booproj  packages.config  parser.boo
Sigmath.ConvertedToBoo/Properties/: AssemblyInfo.boo
Sigmath.ConvertedToBoo/calculus/: ap.boo  calculus.boo  equations.boo  matrix.cs
Sigmath.ConvertedToBoo/computing/: basic.boo  complex.boo  computing.boo  nums.boo  sets.boo
Sigmath.ConvertedToBoo/engineering/: civil.boo  electrical.boo  kinematics.boo  mechanical.boo
Sigmath.ConvertedToBoo/imp/: constants.boo  equify.boo  geometry.boo  logarithm.boo  plot.boo  plot3d.boo  polynomial.cs  random.boo  relations.boo  topology.boo  vectors.boo
Sigmath.ConvertedToBoo/statistics/: algorithms.boo  stats.boo
Sigmath.ConvertedToBoo/trigonometry/: const.boo  hyperbolic.boo
Sigmath.ConvertedToPython/: Sigmath.pyproj  parser.py
Sigmath.ConvertedToPython/Properties/: AssemblyInfo.py
Sigmath.ConvertedToPython/calculus/: ap.py  calculus.py  equations.py  matrix.py
Sigmath.ConvertedToPython/computing/: basic.py  complex.py  computing.py  nums.py  sets.py
Sigmath.ConvertedToPython/engineering/: civil.py  electrical.py  kinematics.py  mechanical.py
Sigmath.ConvertedToPython/imp/: constants.py  equify.py  geometry.py  logarithm.py  plot.py  plot3d.py  polynomial.py  random.py  relations.py  time.py  topology.py  vectors.py
Sigmath.ConvertedToPython/statistics/: algorithms.py  stats.py
Sigmath.ConvertedToPython/trigonometry/: const.py  hyperbolic.py
Sigmath.ConvertedToRuby/: Sigmath.rbproj  parser.rb
Sigmath.ConvertedToRuby/Properties/: AssemblyInfo.rb
Sigmath.ConvertedToRuby/calculus/: ap.rb  calculus.rb  equations.rb  matrix.rb
Sigmath.ConvertedToRuby/computing/: basic.rb  complex.rb  computing.rb  nums.rb  sets.rb
Sigmath.ConvertedToRuby/engineering/: civil.rb  electrical.rb  kinematics.rb  mechanical.rb
Sigmath.ConvertedToRuby/imp/: constants.rb  equify.rb  geometry.rb  logarithm.rb  plot.rb  plot3d.rb  polynomial.rb  random.rb  relations.rb  time.rb  topology.rb  vectors.rb
Sigmath.ConvertedToRuby/statistics/: algorithms.rb  stats.rb
Sigmath.ConvertedToRuby/trigonometry/: const.rb  hyperbolic.rb
Sigmath.ConvertedToVBNet/: Sigmath.vbproj  parser.vb
Sigmath.ConvertedToVBNet/Properties/: AssemblyInfo.vb
Sigmath.ConvertedToVBNet/calculus/: ap.vb  calculus.vb  equations.vb
Sigmath.ConvertedToVBNet/computing/: basic.vb  complex.vb  computing.vb  nums.vb  sets.vb
Sigmath.ConvertedToVBNet/engineering/: civil.vb  electrical.vb  kinematics.vb  mechanical.vb
Sigmath.ConvertedToVBNet/imp/: constants.vb  equify.vb  geometry.vb  logarithm.vb  plot.vb  plot3d.vb  random.vb  relations.vb  time.cs  topology.vb  vectors.vb
Sigmath.ConvertedToVBNet/statistics/: algorithms.vb  stats.vb
Sigmath.ConvertedToVBNet/trigonometry/: const.vb  hyperbolic.vb
Sigmath.egg-info/: PKG-INFO  SOURCES.txt
Sigmath/Sigmath/: Sigmath.csproj  Sigmath.sln  parser.cs
Sigmath/Sigmath/Sigmath.ConvertedToPython/: Sigmath.pyproj  parser.py
Sigmath/Sigmath/Sigmath.ConvertedToRuby/: Sigmath.rbproj  parser.rb
Sigmath/Sigmath/Sigmath.ConvertedToVBNet/: parser.vb  (+1 more)
calculus/: ap.cs  calculus.cs  equations.cs  matrix.cs
chemistry/: main.cs
computing/: basic.cs  complex.cs  computing.cs  nums.cs  sets.cs
cpp_build/: CMakeLists.txt  attr_lambda_should_capture_by_reference.config  include_map.config  internal_include_map.config  paket.dependencies
cpp_build/cmake/: 3rdPartyLibs.cmake  AsposeNatvis.cmake  BuildMetaInfo.cmake  FindCpplibs.cmake  GroupSources.cmake  GuessCompilerPrefix.cmake  OptionsCommon.cmake  PrecompiledHeader.cmake  SetLibraryOutputDir.cmake  SetLibraryOutputName.cmake  cotire.cmake
cpp_build/cmake/3rdpartydirnames/: boost.name  botan.name  double-conversion.name  harfbuzz.name  icu.name  libxml2.name  skia.name
cpp_build/include/calculus/: ap.h  calculus.h
cpp_build/include/computing/: basic.h  complex.h  computing.h  nums.h  sets.h
cpp_build/include/engineering/: civil.h  electrical.h  kinematics.h
cpp_build/include/imp/: constants.h  equify.h  geometry.h  logarithm.h  random.h
cpp_build/include/statistics/: algorithms.h  stats.h
cpp_build/include/trig/: const.h  hyperbolic.h
cpp_build/paket-files/: paket.restore.cached
cpp_build/source/: version_compatibility.cpp
cpp_build/source/calculus/: ap.cpp  calculus.cpp
cpp_build/source/computing/: basic.cpp  complex.cpp  computing.cpp  nums.cpp  sets.cpp
cpp_build/source/engineering/: civil.cpp  electrical.cpp  kinematics.cpp  mechanical.cpp  mechanical.h
cpp_build/source/imp/: ExpressionParser.cpp  ExpressionParser.h  constants.cpp  equify.cpp  geometry.cpp  logarithm.cpp  random.cpp
cpp_build/source/statistics/: algorithms.cpp  stats.cpp
cpp_build/source/trig/: const.cpp  hyperbolic.cpp
engineering/: civil.cs  electrical.cs  kinematics.cs  mechanical.cs
imp/: constants.cs  equify.cs  geometry.cs  logarithm.cs  plot.cs  plot3d.cs  polynomial.cs  random.cs  relations.cs  time.cs  topology.cs  vectors.cs
java_build/Properties/: AssemblyInfo.java
java_build/calculus/: calculus.java  equations.java
java_build/imp/: constants.java
java_build/sigmath/: ArithmeticProgression.java  Basic.java  Civil.java  Compl.java  Computing.java  Electrical.java  Equif.java  ExpressionParser.java  Geometry.java  Hyperbolic.java  Kinematics.java  Logarithm.java  Matrix.java  Mechanical.java  Nums.java  Polynomial.java  PolynomialExtensions.java  Rand.java  Random.java  Sets.java  Statgorithm.java  Statistics.java  Time.java  Trig.java
java_build/tangible/: Func0Param.java  Func1Param.java  TangibleDoubleLists.java  TangibleFloatingPointToInteger.java  TangibleListHelper.java  TangibleOutObject.java  TangibleTryParseHelper.java
statistics/: algorithms.cs  stats.cs
trig/: const.cs  hyperbolic.cs
trigonometry/: const.cs  hyperbolic.cs
(+143 files in other folders)
